[gd_scene load_steps=17 format=3 uid="uid://drcmaq4igepu2"]

[ext_resource type="Script" path="res://Interface/Lives.gd" id="1_ajqu4"]
[ext_resource type="PackedScene" uid="uid://dnfulpiitnhun" path="res://Scenes/life_frame.tscn" id="2_wpwxj"]
[ext_resource type="Script" path="res://Scripts/BytesCounter.gd" id="4_kwr12"]
[ext_resource type="Texture2D" uid="uid://dmyk8nyiqjjnu" path="res://Assets/Sunnyland/sprites/gem/gem-4.png" id="5_ayfs7"]
[ext_resource type="Script" path="res://Scripts/CookiesCounter.gd" id="7_qx7dj"]
[ext_resource type="Script" path="res://Scenes/Weapons.gd" id="8_3i8mn"]
[ext_resource type="Texture2D" uid="uid://bbex0kgtuebnm" path="res://Assets/Sprites/pixilart-drawing.png" id="8_uvcus"]
[ext_resource type="Texture2D" uid="uid://benrkagey8wbt" path="res://Assets/Sprites/ui weapon slot.png" id="9_ogwj4"]
[ext_resource type="Texture2D" uid="uid://bsplx0wu4mtx6" path="res://Assets/Sprites/weapon sprites/wand2.png" id="10_13xwj"]
[ext_resource type="Script" path="res://Scenes/Outlines.gd" id="10_qjf5n"]
[ext_resource type="Texture2D" uid="uid://50ru633m7i8x" path="res://Assets/Sprites/projectile sprites/spear.png" id="11_icgsw"]
[ext_resource type="FontFile" uid="uid://ctvw6s4ilmgbr" path="res://Assets/Fonts/dogicapixelbold.ttf" id="12_233ba"]
[ext_resource type="Texture2D" uid="uid://be1oj5fl8h538" path="res://Assets/Sprites/projectile sprites/dagger.png" id="12_eytnb"]
[ext_resource type="Texture2D" uid="uid://bbiwxdj14t15o" path="res://Assets/Sprites/projectile sprites/blackhole.png" id="13_73gsl"]
[ext_resource type="Texture2D" uid="uid://cx2tla030xl72" path="res://Assets/Sprites/weapon sprites/crossbow.png" id="14_qix5c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kyqhx"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 0, 1)
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer (Hearts)" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = -5
theme_override_constants/margin_top = -5

[node name="Lives" type="BoxContainer" parent="MarginContainer (Hearts)"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = -20
script = ExtResource("1_ajqu4")

[node name="TextureRect" parent="MarginContainer (Hearts)/Lives" instance=ExtResource("2_wpwxj")]
layout_mode = 2

[node name="MarginContainer (Bytes)" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -42.0
offset_bottom = 40.0
grow_horizontal = 0
theme_override_constants/margin_top = -15
theme_override_constants/margin_right = 10

[node name="Bytes" type="BoxContainer" parent="MarginContainer (Bytes)"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = -2
script = ExtResource("4_kwr12")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer (Bytes)/Bytes"]
layout_mode = 2
theme_override_constants/margin_right = 0

[node name="TextureRect" type="TextureRect" parent="MarginContainer (Bytes)/Bytes/MarginContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("5_ayfs7")
stretch_mode = 3

[node name="Label" type="Label" parent="MarginContainer (Bytes)/Bytes"]
layout_mode = 2
theme_override_fonts/font = ExtResource("12_233ba")
theme_override_font_sizes/font_size = 8
text = "x1"

[node name="MarginContainer (Cookies)" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -58.0
offset_top = 15.0
offset_right = 6.0
offset_bottom = 47.0
grow_horizontal = 0
theme_override_constants/margin_right = 4

[node name="Cookies" type="BoxContainer" parent="MarginContainer (Cookies)"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_constants/separation = 0
script = ExtResource("7_qx7dj")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer (Cookies)/Cookies"]
layout_mode = 2
theme_override_constants/margin_top = -15
theme_override_constants/margin_right = -6

[node name="TextureRect" type="TextureRect" parent="MarginContainer (Cookies)/Cookies/MarginContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("8_uvcus")
expand_mode = 1
stretch_mode = 3

[node name="Label" type="Label" parent="MarginContainer (Cookies)/Cookies"]
custom_minimum_size = Vector2(28, 14)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("12_233ba")
theme_override_font_sizes/font_size = 8
text = "x1"

[node name="MarginContainer (Weapons)" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -27.0
offset_right = 121.0
grow_vertical = 0
theme_override_constants/margin_left = 5

[node name="Weapons" type="BoxContainer" parent="MarginContainer (Weapons)"]
custom_minimum_size = Vector2(30, 10)
layout_mode = 2
script = ExtResource("8_3i8mn")

[node name="Firewall" type="TextureRect" parent="MarginContainer (Weapons)/Weapons"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("9_ogwj4")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer (Weapons)/Weapons/Firewall"]
visible = false
layout_mode = 0
offset_left = -7.0
offset_top = -5.0
offset_right = 25.0
offset_bottom = 27.0
texture = ExtResource("10_13xwj")

[node name="PQ" type="TextureRect" parent="MarginContainer (Weapons)/Weapons"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("9_ogwj4")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer (Weapons)/Weapons/PQ"]
visible = false
layout_mode = 0
offset_left = 5.0
offset_top = 3.0
offset_right = 15.0
offset_bottom = 17.0
texture = ExtResource("11_icgsw")
expand_mode = 1

[node name="DMARC" type="TextureRect" parent="MarginContainer (Weapons)/Weapons"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("9_ogwj4")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer (Weapons)/Weapons/DMARC"]
visible = false
layout_mode = 0
offset_left = 4.0
offset_top = 8.0
offset_right = 16.0
offset_bottom = 12.0
texture = ExtResource("12_eytnb")

[node name="Blackhole" type="TextureRect" parent="MarginContainer (Weapons)/Weapons"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("9_ogwj4")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer (Weapons)/Weapons/Blackhole"]
visible = false
layout_mode = 0
offset_left = 3.0
offset_top = 1.0
offset_right = 19.0
offset_bottom = 17.0
texture = ExtResource("13_73gsl")
expand_mode = 1

[node name="Antivirus" type="TextureRect" parent="MarginContainer (Weapons)/Weapons"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("9_ogwj4")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer (Weapons)/Weapons/Antivirus"]
visible = false
layout_mode = 0
offset_left = 3.0
offset_top = 2.0
offset_right = 19.0
offset_bottom = 18.0
texture = ExtResource("14_qix5c")
expand_mode = 1
stretch_mode = 3

[node name="Outlines" type="BoxContainer" parent="MarginContainer (Weapons)"]
layout_mode = 2
script = ExtResource("10_qjf5n")

[node name="FirewallOutline" type="Panel" parent="MarginContainer (Weapons)/Outlines"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_kyqhx")

[node name="BlackoleOutline" type="Panel" parent="MarginContainer (Weapons)/Outlines"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_kyqhx")

[node name="DMARCOutline" type="Panel" parent="MarginContainer (Weapons)/Outlines"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_kyqhx")

[node name="PQOutline" type="Panel" parent="MarginContainer (Weapons)/Outlines"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_kyqhx")

[node name="AntivirusOutline" type="Panel" parent="MarginContainer (Weapons)/Outlines"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_kyqhx")
